# skywalker

./: CMakeLists.txt  README.md
arduino/: motor_controller.ino
include/skywalker/: arduino_serial.hpp  image_shift.hpp  sliding_average.hpp
src/: skywalker.cpp
src/lib/: arduino_serial.cpp  image_shift.cpp  sliding_average.cpp
utils/: cap_uvc.c
